--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <html>
- <head>
-   <title>Primeiro projeto no github</title>
- </head>
-<body>
-  <h1>Ola mundo</h1>
- <h2> isso e um teste</h2>
- </body>
+      <head>
+             <title>Primeiro projeto no github</title>
+             <link rel="sylesheet" href="style.css>
+      </head>
+      <body>
+      <header>
+              <img src="https://br.web.img3.acsta.net/img/43/79/4379582804d2a0f50f73342f8cd8bbaf.jpg">
+              <nav>
+                     <ul>
+                             <li><a href="#">Inicio</a></li>
+                             <li><a hreef"#">Sobre</a></li>
+                             <li><a hreef"#">Contato</a></li>
+                     </ul>
+              </nav>
+       </header>
+       </body>
 </html>
