--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
                      </ul>
               </nav>
        </header>
+       <section id="banner"></section>
+       <section id="noticias">
+       <h3>Noticias</he>
+       <ul>
+              <li></li>
+        </ul>
+        </section>
        </body>
 </html>
