--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
        <section id="noticias">
        <h3>Noticias</he>
        <ul>
-              <li></li>
-        </ul>
+            <li>
+              <img src="">
+              <div class="categoria">esportes</div>
+              <h2>Titulo da noticia</h2>
+              <a> Veja mais</a>
+   </li>
+      </ul>
         </section>
        </body>
 </html>
