--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        </header>
        <section id="banner"></section>
        <section id="noticias">
-       <h3>Noticias</he>
+       <h3>Noticias</h3>
        <ul>
             <li>
               <img src="">
